Fix of work tool Pixel

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,48 +12,11 @@ body {
 }
 
 .main {
-  display: flex;
-}
-
-.canvas {
-  border: 1px solid white;
-}
-
-.canvasField,
-.canvasPointer {
-  border: 1px solid white;
-  position: absolute;
-  left: 170px;
-  z-index: -1;
-}
-
-.toolbar {
-  border: 1px solid white;
-  margin-right: 8px;
-  color: white;
-}
-
-.tools {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-}
-
-.toolsGroup {
-  display: flex;
-}
-
-.tool {
-  display: flex;
-  width: 50%;
-}
-
-.tool_btn {
-  padding: 15px;
-  cursor: pointer;
-  width: 100%;
-}
-
-.tool_btn.active {
-  background: red;
+  display: grid;
+  grid-template-columns: 160px 1fr;
+  grid-template-rows: 40px 500px;
+  grid-template-areas:
+    "toolbar toolbar toolbar"
+    "tools canvas canvas"
+    "tools canvas canvas"
 }
