--- a/src/components/tools/Tools.module.css
+++ b/src/components/tools/Tools.module.css
@@ -1,6 +1,5 @@
 .tools {
-  border: 1px solid white;
-  margin-right: 8px;
+  box-shadow: 0 0 1px 2px white;
   color: white;
   grid-area: tools;
 }
